<resources>
    <string name="app_name">SRA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="welcome_user">Welcome User</string>
        <string name="logout">Log Out</string>
        <string name="logout_icon">Logout icon</string>
        <string name="my_dashboard">My Dashboard</string>
        <string name="change_password">Change Password</string>
        <string name="view_performance">View Performance</string>
        <string name="rewards_and_points">Rewards and Points</string>
        <string name="scan_trash">Scan Trash</string>

</resources>